--- a/core/pom.xml
+++ b/core/pom.xml
@@ -3,11 +3,11 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>com.babel</groupId>
-	<artifactId>order</artifactId>
-	<version>1.0</version>
+	<groupId>com.babel.core</groupId>
+	<artifactId>babel-core</artifactId>
+	<version>1.0.0</version>
 	<packaging>jar</packaging>
-	<name>Order</name>
+	<name>Babel-Core Components</name>
 	<build>
 		<sourceDirectory>src</sourceDirectory>
 		<testSourceDirectory>test</testSourceDirectory>
@@ -65,13 +65,6 @@
 
 	<dependencies>
 
-		  <dependency>
-			<groupId>com.babel.core</groupId>
-			<artifactId>babel-core</artifactId>
-			<version>1.0.0</version>
-		</dependency>
-
-
 		<!-- annotations for JSON serialization -->
 		<dependency>
 			<groupId>org.codehaus.jackson</groupId>
@@ -110,17 +103,6 @@
 			<groupId>log4j</groupId>
 			<artifactId>log4j</artifactId>
 			<version>1.2.13</version>
-			<scope>provided</scope>
-		</dependency>
-		<dependency>
-			<groupId>javax.annotation</groupId>
-			<artifactId>jsr250-api</artifactId>
-			<version>1.0</version>
-		</dependency>
-		<dependency>
-			<groupId>javax.ejb</groupId>
-			<artifactId>ejb-api</artifactId>
-			<version>3.0</version>
 			<scope>provided</scope>
 		</dependency>
 
