--- a/orderejb/pom.xml
+++ b/orderejb/pom.xml
@@ -4,10 +4,10 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.babel</groupId>
-	<artifactId>ioemail</artifactId>
+	<artifactId>orderejb</artifactId>
 	<version>1.0</version>
-	<packaging>jar</packaging>
-	<name>IOEmail</name>
+	<packaging>ejb</packaging>
+	<name>orderEJB</name>
 	<build>
 		<sourceDirectory>src</sourceDirectory>
 		<testSourceDirectory>test</testSourceDirectory>
@@ -38,6 +38,18 @@
 
 		<plugins>
 			<plugin>
+				<artifactId>maven-ejb-plugin</artifactId>
+				<configuration>
+					<ejbVersion>3.0</ejbVersion>
+					<generateClient>false</generateClient>
+					<clientExcludes>
+						<clientExclude>**/*.xml</clientExclude>
+					</clientExcludes>
+				</configuration>
+			</plugin>
+			
+      
+			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<configuration>
 					<source>1.6</source>
@@ -55,10 +67,25 @@
 
 	<dependencies>
 
-		  
+		  <dependency>
+			<groupId>com.babel</groupId>
+			<artifactId>order</artifactId>
+			<version>1.0</version>
+		</dependency>
+ <dependency>
+      <groupId>javax.ejb</groupId>
+      <artifactId>ejb-api</artifactId>
+      <version>3.0</version>
+      <scope>provided</scope>
+    </dependency>
+    
+		<dependency>
+			<groupId>net.sf.ehcache</groupId>
+			<artifactId>ehcache-core</artifactId>
+			<version>2.0.1</version>
+			<scope>compile</scope>
+		</dependency>
 
-
-		
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
@@ -71,12 +98,6 @@
 			<version>1.2.13</version>
 			<scope>provided</scope>
 		</dependency>
-		<dependency>
-			<groupId>com.sun.mail</groupId>
-			<artifactId>javax.mail</artifactId>
-			<version>1.5.1</version>
-		</dependency>
 		
-
 	</dependencies>
 </project>
