--- a/orderws/pom.xml
+++ b/orderws/pom.xml
@@ -4,10 +4,10 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.babel</groupId>
-	<artifactId>ioemail</artifactId>
+	<artifactId>order-ws</artifactId>
 	<version>1.0</version>
-	<packaging>jar</packaging>
-	<name>IOEmail</name>
+	<packaging>war</packaging>
+	<name>Order Web Service</name>
 	<build>
 		<sourceDirectory>src</sourceDirectory>
 		<testSourceDirectory>test</testSourceDirectory>
@@ -38,6 +38,16 @@
 
 		<plugins>
 			<plugin>
+				<artifactId>maven-war-plugin</artifactId>
+				<configuration>
+					
+					<warSourceDirectory>${basedir}/WebContent</warSourceDirectory>
+					<webXml>${basedir}/WebContent/WEB-INF/web.xml</webXml>
+				</configuration>
+			</plugin>
+			
+      
+			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<configuration>
 					<source>1.6</source>
@@ -55,28 +65,25 @@
 
 	<dependencies>
 
-		  
-
-
-		
+		  <dependency>
+			<groupId>com.babel</groupId>
+			<artifactId>order</artifactId>
+			<version>1.0</version>
+		</dependency>
+ 
+     <dependency>
+      <groupId>com.sun.xml.ws</groupId>
+      <artifactId>jaxws-rt</artifactId>
+      <version>2.1.3</version>
+    </dependency>
+    
+   
+    
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>4.7</version>
 			<scope>test</scope>
 		</dependency>
-		<dependency>
-			<groupId>log4j</groupId>
-			<artifactId>log4j</artifactId>
-			<version>1.2.13</version>
-			<scope>provided</scope>
-		</dependency>
-		<dependency>
-			<groupId>com.sun.mail</groupId>
-			<artifactId>javax.mail</artifactId>
-			<version>1.5.1</version>
-		</dependency>
-		
-
 	</dependencies>
 </project>
