order-process::ApproveOrder

--- a/orderEAR/pom.xml
+++ b/orderEAR/pom.xml
@@ -48,16 +48,17 @@
          include them again in the wars. @see dependencies
          http://maven.apache.org/plugins/maven-ear-plugin/examples/skinny-wars.html -->
          
-          <skinnyWars>true</skinnyWars>
+        <skinnyWars>true</skinnyWars> 
           
         <!-- EAR file name should not contain version number. Duplicate EJB names in the app server are not allowed -->
-        <finalName>order-ear</finalName>
+        <finalName>orderEAR</finalName>
           <modules>
-              <webModule>
->                         <groupId>com.babel</groupId>
->                         <artifactId>order-ws</artifactId>
->                         <contextRoot>/order-ws</contextRoot>
->                     </webModule>
+           <!--    <webModule>
+				<groupId>com.babel</groupId>
+				<artifactId>order-web</artifactId>
+				<contextRoot>/order-web</contextRoot>
+			</webModule> -->
+					
             <ejbModule>
               <groupId>com.babel</groupId>
               <artifactId>orderejb</artifactId>
@@ -94,7 +95,7 @@
 	</build>
 
 	<dependencies>
-<dependency>
+		<dependency>
 			<groupId>com.babel.core</groupId>
 			<artifactId>babel-core</artifactId>
 			<version>1.0.0</version>
@@ -105,20 +106,22 @@
 			<artifactId>order</artifactId>
 			<version>1.0</version>
 			<type>jar</type>
+			
 		</dependency>
 		  <dependency>
 			<groupId>com.babel</groupId>
 			<artifactId>orderejb</artifactId>
 			<version>1.0</version>
-			<type>ejb</type>
-		</dependency>
-		   <dependency>
+			<type>ejb</type>			
+		 </dependency>
+		 
+		   <!-- <dependency>
 			<groupId>com.babel</groupId>
-			<artifactId>order-ws</artifactId>
+			<artifactId>order-web</artifactId>
 			<version>1.0</version>
 			<type>war</type>
-		</dependency>
-
+		</dependency>  -->
+ 
 	
 		
 	</dependencies>
