orderEAR now includes the order-ws
Bug Fixes:
WS - JAXB obj-to-XML cycle detected when the one-to-many relationship
was populated. Fix: added field acces type for JAXB and @XLMTransient
for OrderLine.order

--- a/orderEAR/pom.xml
+++ b/orderEAR/pom.xml
@@ -53,11 +53,11 @@
         <!-- EAR file name should not contain version number. Duplicate EJB names in the app server are not allowed -->
         <finalName>orderEAR</finalName>
           <modules>
-           <!--    <webModule>
+              <webModule>
 				<groupId>com.babel</groupId>
-				<artifactId>order-web</artifactId>
-				<contextRoot>/order-web</contextRoot>
-			</webModule> -->
+				<artifactId>order-ws</artifactId>
+				<contextRoot>/order-ws</contextRoot>
+			</webModule> 
 					
             <ejbModule>
               <groupId>com.babel</groupId>
@@ -115,12 +115,12 @@
 			<type>ejb</type>			
 		 </dependency>
 		 
-		   <!-- <dependency>
+		    <dependency>
 			<groupId>com.babel</groupId>
-			<artifactId>order-web</artifactId>
+			<artifactId>order-ws</artifactId>
 			<version>1.0</version>
 			<type>war</type>
-		</dependency>  -->
+		</dependency> 
  
 	
 		
